# learn-langs

learn-c/: IntArrayExample.c  Makefile.examples  Makefile.scratch  constusage.c  dict.c  notes.md  style.md  unsafe.c  useful_funcs.c
learn-c-cpp/: Algorithms.cpp  Casting.cpp  ClassConsts.cpp  CopyAndMove.cpp  CopyAndMoveExample.cpp  Ctors.cpp  Enums.cpp  Equality.cpp  Format.cpp  FunctionTemplates.cpp  Init.cpp  ParkingLot.cpp  Polymorphism.cpp  Scratch.cpp  Singletons.cpp  String.cpp  StringToNumErrorDemo.cpp  Style.cpp  Utils.cpp  clang_help.txt  learn-c-cpp.code-workspace  string_usage.c
learn-c-cpp/CPPNotes/: A_Suggested Reading Order.md  Basics.md  Building and Debugging.md  CMake.md  Casting.md  Classes and Structs.md  Collections.md  Consts.md  Error Handling.md  Functional.md  Inheritance and Polymorphism.md  Pointers.md  Polls and Events.md  Python to CPP Mapping.md  References.md  Smart Pointers.md  Statics and Globals.md  String.md  Templates.md  Tools.md  Value Categories.md  Vectors and Arrays.md  printopts.txt
learn-c-cpp/archive/: Printing.cpp
learn-c-cpp/archive/learn-cmake/opengl-demo/: CMakeLists.txt
learn-c-cpp/archive/learn-cmake/opengl-demo/app/: CMakeLists.txt  main.cpp  opengl_main.cpp
learn-c-cpp/archive/learn-cmake/opengl-demo/utils/: CMakeLists.txt  Point.cpp  Point.h
learn-c-cpp/archive/learn-cmake/tutorial-step1/: CMakeLists.txt  tutorial.cxx
learn-c-cpp/archive/learn-cmake/tutorial-step1/MathFunctions/: CMakeLists.txt
learn-c-cpp/archive/learn-cmake/tutorial-step2/: CMakeLists.txt  tutorial.cxx
learn-c-cpp/archive/learn-cmake/tutorial-step2/MathFunctions/: CMakeLists.txt
learn-c-cpp/archive/learn-cmake/tutorial-step3/: CMakeLists.txt
learn-c-cpp/archive/learn-cmake/tutorial-step3/MathFunctions/: CMakeLists.txt  mysqrt.cxx
learn-c-cpp/archive/learn-cmake/tutorial-step5/: CMakeLists.txt
learn-c-cpp/linkage-demo/: Main.cpp  Utils.cpp  build.sh
learn-c-cpp/make-demos/: README.md
learn-c-cpp/make-demos/learn-cmake-old/first/: CMakeLists.txt  README.md  a.out
learn-c-cpp/make-demos/learn-cmake-old/first/include/: Blah.h
learn-c-cpp/make-demos/learn-cmake-old/first/src/: Blah.c  Main.c
learn-c-cpp/make-demos/learn-cmake-old/second/: CMakeLists.txt  README.md
learn-c-cpp/make-demos/learn-cmake-old/second/blah/: Blah.cpp
learn-c-cpp/make-demos/learn-cmake-old/second/blah/include/: Blah.h
learn-c-cpp/make-demos/learn-cmake-old/second/src/: Main.cpp
learn-c-cpp/make-demos/learn-cmake/exe-with-dep-lib/: CMakeLists.txt  main.c
learn-c-cpp/make-demos/learn-cmake/exe-with-dep-lib/web-build/: CMakeCache.txt  Makefile  cmake_install.cmake  exe-with-dep-lib.js  exe-with-dep-lib.wasm
learn-c-cpp/make-demos/learn-cmake/exe-with-dep-pkgconfig/: CMakeLists.txt  main.c
learn-c-cpp/make-demos/learn-cmake/simple-lib/: CMakeLists.txt
learn-c-cpp/make-demos/learn-cmake/simple-lib/include/: blah.h
learn-c-cpp/make-demos/learn-cmake/simple-lib/src/: blah.c
learn-c-cpp/make-demos/learn-cmake/simple-lib/web-build/: CMakeCache.txt  Makefile  cmake_install.cmake
learn-c-cpp/nodes/: Node2.cpp  Node3.cpp  Node4.cpp
learn-c-cpp/testing/learn-catch2-1/: CMakeLists.txt  Cookie.cpp  Cookie.h  main.cpp  test_Cookie.cpp
learn-c-cpp/testing/quickstart-catch2/: CMakeLists.txt  factorial_impl.cpp  factorial_impl.h  main.cpp  test_factorial.cpp
learn-c/cookie/: Makefile  main.c  scratch.c  scratch.h
learn-cpp/: simple.cpp  style.cpp  style.h  styleguide.md
learn-cpp/Z_temp/: chararr.cpp  templ_ducktype.cpp  templates_spec.cpp
learn-cpp/scratch/: Casting.cpp  Casting.h  Cookie.cpp  Cookie.h  Counter.cpp  Counter.h  Makefile  Scratch.cpp  Utils.cpp  Utils.h
learn-cpp/tbd_A_basics/: _TOC.md
learn-cpp/tbd_B_pointers/: _TOC.md
learn-cpp/tbd_C_functions/: _TOC.md
learn-cpp/tbd_D_classes/: _TOC.md  tbd_callable.cpp  tbd_templates_simple.cpp
learn-cpp/tbd_E_exceptions/: tbd_custom.cpp
learn-cpp/tbd_E_strings/: _TOC.md  tbd_str.cpp  tbd_str_streams.cpp
learn-cpp/tbd_F_collections_algos_stl/: _TOC.md  tbd_algorithms.cpp  tbd_custom_objs.cpp  tbd_learn_deque.cpp  tbd_learn_maps.cpp  tbd_learn_sets.cpp  tbd_learn_vectors.cpp
learn-cpp/tbd_G_Lambdas/: _TOC.md  tbd_lambdas.cpp
learn-dotnetcore/: README.md
learn-dotnetcore/golden/: golden.sln
learn-dotnetcore/learn-json/: Program.cs  learn-json.csproj
learn-haskell/: Example.hs  LearnMonads.hs  LearnTypes.hs  LearnTypes2.hs  LearnTypesML.hs  Main.hs  Sample-Main.hs
learn-haskell/exercises/exercism/: LICENSE  exercism.cabal
learn-haskell/exercises/exercism/src/: MyLib.hs
learn-haskell/my-project/: my-project.cabal
learn-haskell/my-project/app/: Main.hs
learn-haskell/my-project/src/: MyLib.hs
learn-haskell/mynotes/: 1 - installation.md  2 - Getting Started.md  3 - Types.md  4 - Semigroups and Monoids.md  5 - Folding.md  6 - Functors.md  7 - Monads.md  8 - IO and Main.md  Running Notes.md
learn-haskell/old/: Untitled.ipynb  Utils.hs  hashmaps.ipynb  rank_question.ipynb  types.ipynb
learn-haskell/scratch/: CHANGELOG.md  scratch.cabal
learn-python/: Decorators.ipynb  SQLAlchemy.ipynb  asserts.py  binary.py  clioptions.py  cookies.json  cookies.pkl  create_decorators.py  creating_python_dist.md  dates_stuff.ipynb  db.py  exceptions.py  file-seek.py  fileio.py  func_prog_apis.html  func_prog_apis.ipynb  functions.py  functions_varargs.py  getter_setter.py  globals.py  hypothesis-testing.ipynb  iterator.py  iterators_containers_generators.ipynb  learn-curses.py  learn_doctest.py  learn_json.ipynb  learn_json.py  learn_regex.ipynb  learn_tqdm.py  loops.py  misc.ipynb  modules.py  monads.py  pathstuff.ipynb  pickler.py  python_style_guide.md  redirect_iostream.py  slices.py  sqlite.ipynb  typing.md
learn-python/bdd/: simple_scratch.py
learn-python/classes/: callable_classes.py  dataclass_stuff.ipynb  dynclass.py  inheritance.py  interfaces.py  polymorphism.py  scratch.py
learn-python/config/: example.cfg  main.py
learn-python/learn-setup/: setup.cfg  setup.py
learn-python/learn-setup/scratch/: main.py
learn-rust/: learn-rust.code-workspace  notes.md
(+199 files in other folders)
