cabal-version:      3.0
name:               my-project
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Avilay Parekh
maintainer:         avilay@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable my-project-exe
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        haskell-say,
        my-project

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite my-project-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        aeson,
        my-project
