# Build the sdist as usual by running `python setup.py sdist`
# The default installation `pip install -e .` or its equivalent will not install avilabs-snippets or haikunator.
# To just install `color` run `pip install -e .[color]`.
# To just install `named` run `pip install -e .[named]`.
# To install both together run `pip install -e .[color,named]`

[metadata]
name = Scratch

[options.extras_require]
color = avilabs-snippets
named = haikunator
