cabal-version:      3.0
name:               exercism
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Avilay Parekh
maintainer:         avilay@meta.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.1,
        text
    hs-source-dirs:   src
    default-language: Haskell2010
